src/objects/aa_Topic__c.object
<CustomObject>
    <description>List of topics and subtopics</description>
    <fields>
        <fullName>Sub_Topic__c</fullName>
        <description>Please insert multiple sub topics semi colon (;) separated</description>
        <inlineHelpText>Please insert multiple sub topics semi colon (;) separated 
Example - 
Competitor strategy; Price change trend; Other</inlineHelpText>
        <label>Sub Topic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Sub_Topic__c</fullName>
        <label>Test Sub Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <description>Topic Name</description>
        <label>Topic Name</label>
        <picklist>
            <picklistValues>
                <fullName>Sales/Customer development/Route to Market</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply chain/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR/Organization &amp; People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Competitor Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agent Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Topics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>